[gd_scene load_steps=3 format=3 uid="uid://nxt0khoe0uxm"]

[ext_resource type="Script" path="res://Scripts/pauseMenu.gd" id="1_i6weq"]
[ext_resource type="Theme" uid="uid://c1m7qt4i4yj6k" path="res://Themes/Default.tres" id="1_y4buv"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_i6weq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133196, 0.133196, 0.133196, 0.494118)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 174.0
grow_horizontal = 2
theme = ExtResource("1_y4buv")
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -243.0
offset_right = 149.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Resume" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y4buv")
theme_override_font_sizes/font_size = 80
text = "Resume"

[node name="Restart" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y4buv")
theme_override_font_sizes/font_size = 80
text = "Restart"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y4buv")
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
